Add SSL and password username proxy auth

--- a/.env.example
+++ b/.env.example
@@ -1,41 +1,106 @@
-# ==========================================
-# Kerberos POC Environment Configuration
-# ==========================================
-# Copy this file to .env and update with your values:
-# cp .env.example .env
+# =============================================================================
+# Authentication Testing Configuration
+# =============================================================================
+# Copy this file to .env and modify the values as needed:
+#   cp env.example .env
+#   
+# Then edit .env with your actual values.
 
-# ===================
-# Proxy Configuration
-# ===================
-PROXY_HOST=
-PROXY_PORT=
+# =============================================================================
+# REQUIRED CONFIGURATION
+# =============================================================================
 
-# =======================
-# Kerberos Configuration
-# =======================
-KERBEROS_REALM=
-KERBEROS_PRINCIPAL=
+# -----------------------------------------------------------------------------
+# Proxy Configuration (REQUIRED)
+# -----------------------------------------------------------------------------
+# The proxy server through which all requests will be routed
+PROXY_HOST=your-proxy-host.example.com
+PROXY_PORT=8080
 
-# ===================
-# File Paths
-# ===================
-# Absolute paths or relative to project root
-KEYTAB_FILE=
-KRB5_CONF=
+# -----------------------------------------------------------------------------
+# Test Configuration (REQUIRED)
+# -----------------------------------------------------------------------------
+# URL to test connectivity and authentication
+TEST_URL=https://httpbin.org/get
 
-# ==================
-# Testing Configuration
-# ==================
-TEST_URL=https://www.google.com
-APPLICATION_NAME=CUBE
+# Application identifier sent in request headers
+APPLICATION_NAME=kerberos-poc-tester
 
-# ==================
-# Optional Settings
-# ==================
-# Set to true/false or 1/0
-DRY_RUN=false
-NO_TEST=false
+# -----------------------------------------------------------------------------
+# Kerberos Authentication Configuration (REQUIRED for Kerberos)
+# -----------------------------------------------------------------------------
+# Kerberos realm (domain)
+KERBEROS_REALM=YOUR.REALM.COM
+
+# Service principal for authentication
+KERBEROS_PRINCIPAL=svcuser@YOUR.REALM.COM
+
+# Path to the keytab file containing the service credentials
+KEYTAB_FILE_PATH=./svcfracube-jdk17.keytab
+
+# Path to the Kerberos configuration file
+KRB5_CONF_PATH=./krb5.conf
+
+# =============================================================================
+# OPTIONAL CONFIGURATION
+# =============================================================================
+
+# -----------------------------------------------------------------------------
+# Authentication Method Selection
+# -----------------------------------------------------------------------------
+# Choose which authentication method to use by default
+# Options: kerberos, ssl, basic
+# Default: kerberos
+AUTH_METHOD=kerberos
+
+# -----------------------------------------------------------------------------
+# SSL Certificate Authentication (OPTIONAL - for SSL auth method)
+# -----------------------------------------------------------------------------
+# Path to client certificate file (.pem or .crt)
+SSL_CERT_PATH=./certs/client.pem
+
+# Path to private key file (.key) - leave empty if cert contains both cert and key
+SSL_KEY_PATH=./certs/client.key
+
+# Path to CA bundle file for server verification - leave empty to use system default
+SSL_CA_BUNDLE_PATH=./certs/ca-bundle.pem
+
+# -----------------------------------------------------------------------------
+# Username/Password Authentication (OPTIONAL - for basic auth method)
+# -----------------------------------------------------------------------------
+# Username for HTTP Basic/Digest authentication
+AUTH_USERNAME=your-username
+
+# Password for HTTP Basic/Digest authentication
+AUTH_PASSWORD=your-password
+
+# -----------------------------------------------------------------------------
+# Google Search API Configuration (OPTIONAL - for search tests)
+# -----------------------------------------------------------------------------
+# Google API key for Custom Search API (use scalaris)
+GOOGLE_SEARCH_API_KEY=your-google-api-key
+
+# Custom Search Engine ID
+# Create at: https://cse.google.com/ (or from scalaris)
+GOOGLE_SEARCH_ENGINE_ID=your-search-engine-id
+
+# Search query to use for testing
+GOOGLE_SEARCH_CONTEXT=test search query
+
+# Google Custom Search API endpoint URL (use scalaris endpoint instead)
+GOOGLE_SEARCH_URL=https://www.googleapis.com/customsearch/v1
+
+# -----------------------------------------------------------------------------
+# Logging and Debug Configuration (OPTIONAL)
+# -----------------------------------------------------------------------------
+# Enable debug mode (true/false, 1/0, yes/no, on/off)
 DEBUG=false
 
-# Logging level: DEBUG, INFO, WARNING, ERROR, CRITICAL
+# Logging level (DEBUG, INFO, WARNING, ERROR)
 LOG_LEVEL=INFO
+
+# Run in dry-run mode (simulation only)
+DRY_RUN=false
+
+# Skip connection tests
+NO_TEST=false
